--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-Flask==3.0.0
+streamlit
 keras==2.11.0
 nltk==3.8.1
 numpy==1.22.2
-sacremoses
-sentencepiece
+sacremoses==0.0.53
+sentencepiece==0.1.99
 spacy==3.7.2
 spacy-langdetect==0.1.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 transformers==4.35.2
+
