--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,14 @@ spacy-langdetect==0.1.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 transformers==4.35.2
+pip>=24.0
+setuptools
+wheel
+streamlit
+keras>=2.15.0
+nltk
+numpy>=1.26.0
+
 
 
 
